--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -623,7 +623,7 @@ header.global {
 
 			/*&--grp-plus {
 				> a {
-					background-image: image-url("appname--grp-plus.png");
+					background-image: url("appname--grp-plus.png");
 					width: 117px;
 				}
 			}*/
