--- a/src/assets/styles/layout/_forms.scss
+++ b/src/assets/styles/layout/_forms.scss
@@ -23,15 +23,8 @@ input[type="color"],
 	&:focus {
 		border-color: rgba($color-red, 0.8);
 		box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba($color-red, 0.6);
-		outline-width: 0;
-		outline: none;
+		outline: none 0;
 	}
-
-	/*&::-ms-clear {
-		display: none;
-		width: 0;
-		height: 0;
-	}*/
 }
 
 input[type="file"],
@@ -44,22 +37,21 @@ input[type="checkbox"] {
 
 .btn {
 	padding: 6px 10px;
-
+	
 	&:focus,
 	&:active:focus,
 	&:active.focus,
 	&.focus,
 	&.active:focus,
 	&.active.focus {
-		outline-width: 0;
-		outline: none;
+		outline: none 0;
 	}
-
+	
 	&-default {
 		color: black;
 		background-color: transparent;
 		border-color: rgba(115, 115, 115, 0.3);
-
+		
 		&:hover,
 			/* &:focus,
 			&.focus,*/
@@ -69,14 +61,14 @@ input[type="checkbox"] {
 			background-color: #e6e6e6;
 			border-color: #adadad;
 		}
-
+		
 		&.disabled,
 		&[disabled] {
 			border-color: rgba(115, 115, 115, 0.3);
 			background-color: transparent;
 			color: rgba(0, 0, 0, .4);
 			text-shadow: white 1px 1px 0;
-
+			
 			&:hover,
 			&:focus,
 			&.focus,
@@ -88,23 +80,23 @@ input[type="checkbox"] {
 				text-shadow: white 1px 1px 0;
 			}
 		}
-
+		
 		.input-group-btn & {
 			background-color: white;
 		}
 	}
-
+	
 	&-primary {
 		background-color: lighten($color-teal, 7%);
 		border-color: $color-teal;
 		//margin-left: 11px;
-
+		
 		&:hover,
 		&:focus,
 		&.focus {
 			background-color: lighten($color-teal, 1%);
 		}
-
+		
 		&:active,
 		&.active {
 			&,
@@ -114,25 +106,25 @@ input[type="checkbox"] {
 			}
 		}
 	}
-
+	
 	&-xs,
 	.btn-group-xs > & {
 		padding: 1px 5px;
 	}
-
+	
 	&-sm {
 		padding: 5px 10px;
 	}
-
+	
 	&-lg,
 	.btn-group-lg > & {
 		padding: 10px 16px;
 	}
-
+	
 	+ .btn {
 		margin-left: 15px;
 	}
-
+	
 	/*> i {
 		font-size: 14px;
 	}*/
@@ -142,19 +134,19 @@ input[type="checkbox"] {
 	&-btn > button > .fa {
 		transform: rotate(0.001deg);
 	}
-
+	
 	&-sm {
 		input[type="text"],
 		.input-group-btn > .btn {
 			padding: 2px 8px;
 		}
-
+		
 		.input-group-btn {
 			i {
 				font-size: inherit;
 			}
 		}
-
+		
 		.input-clear {
 			> .form-control {
 				font-size: 12px;
@@ -162,7 +154,7 @@ input[type="checkbox"] {
 				height: 30px;
 				padding: 5px 10px;
 			}
-
+			
 			> .input-group {
 				&-addon,
 				&-btn > .btn {
@@ -174,12 +166,12 @@ input[type="checkbox"] {
 				}
 			}
 		}
-
+		
 		&.form-control {
 			padding: 5px 10px;
 		}
 	}
-
+	
 	+ .checkbox {
 		margin-top: 10px;
 	}
@@ -206,10 +198,10 @@ select.form-control {
 	color: black;
 	background-color: transparent;
 	border-color: rgba(115, 115, 115, .3);
-
+	
 	&:focus {
 		border-color: rgba(199, 36, 32, 0.8);
-		@include box-shadow(0 1px 1px rgba(0, 0, 0, .075) inset, 0 0 8px rgba(199, 36, 32, .6));
+		box-shadow: 0 1px 1px rgba(0, 0, 0, .075) inset, 0 0 8px rgba(199, 36, 32, .6);
 	}
 }
 
@@ -218,10 +210,10 @@ select.form-control {
 		padding: 6px 10px;
 		color: black;
 	}
-
+	
 	&-group {
 		position: relative;
-
+		
 		> label {
 			font-size: 12px;
 			line-height: 14px;
@@ -229,7 +221,7 @@ select.form-control {
 			margin: 0 0 3px;
 			font-weight: bold;
 		}
-
+		
 		.btn {
 			&.help {
 				position: absolute;
@@ -242,7 +234,7 @@ select.form-control {
 				padding: 0;
 			}
 		}
-
+		
 		+ .filter-options {
 			margin-top: 10px;
 		}
@@ -258,7 +250,7 @@ select.form-control {
 
 .input-clear {
 	position: relative;
-
+	
 	> input[type="text"] {
 		&::-ms-clear,
 		&::-ms-reveal {
@@ -267,7 +259,7 @@ select.form-control {
 			height: 0;
 		}
 	}
-
+	
 	> button.clear {
 		top: 0;
 		right: 0;
@@ -276,26 +268,26 @@ select.form-control {
 		font-size: 0;
 		color: black;
 		z-index: 10;
-
+		
 		&:after {
 			content: "\f00d";
 			font-family: "FontAwesome";
 			font-size: 12px;
 			line-height: 16px;
 		}
-
+		
 		&:hover,
 		&:focus {
 			text-decoration: none;
 		}
 	}
-
+	
 	> .fa {
-		@include transform(rotate(0.001deg));
+		transform: rotate(0.001deg);
 		position: absolute;
 		top: 9px;
 		left: 7px;
-
+		
 		.form-group-sm & {
 			font-size: 12px;
 		}
