--- a/src/assets/styles/components/_floating-menu.scss
+++ b/src/assets/styles/components/_floating-menu.scss
@@ -7,26 +7,26 @@
 	height: 40px;
 	margin: auto;
 	right: 0;
-	@include transform-origin(100%, 50%);
-	@include transform(rotate(-90deg) translate(50%, -50%) perspective(1px) scale(1.0));
-
+	transform-origin: 100% 50%;
+	transform: rotate(-90deg) translate(50%, -50%) perspective(1px) scale(1.0);
+	
 	.ie8 & {
 		-ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=3)";
 	}
-
+	
 	ul {
 		margin: 0;
 		padding: 0;
-
+		
 		> li {
 			list-style: none;
 			display: inline-block;
 			margin-left: -1px;
-
+			
 			&:first-child {
 				margin-left: 0;
 			}
-
+			
 			> a {
 				display: block;
 				background-color: rgba(0, 0, 0, .6);
@@ -39,23 +39,23 @@
 				border-bottom: none;
 				border-top-left-radius: 5px;
 				border-top-right-radius: 5px;
-
+				
 				&:hover {
 					background-color: rgba(0, 0, 0, 1);
 					color: rgba(243, 243, 243, 1);
 					border: 1px solid rgba(243, 243, 243, 1);
 					border-bottom: none;
 				}
-
+				
 				&.feedback {
 					background-color: rgba(0, 113, 59, .6);
-
+					
 					&:hover {
 						background-color: rgba(0, 113, 59, 1);
 					}
 				}
 			}
-
+			
 			&.active {
 				> a {
 					@extend .text-not-link;
