--- a/src/assets/styles/helpers/_mixins.scss
+++ b/src/assets/styles/helpers/_mixins.scss
@@ -1,6 +1,3 @@
-// Compass mixins are used instead.
-//@import "../../node_modules/sass-flex-mixin/flex";
-
 @mixin container() {
 	@include container-fixed;
 
@@ -28,4 +25,10 @@
 	background-image: linear-gradient(to bottom, $colorstart, $colorend);
 	background-repeat: repeat-x;
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#{$colorstart}', endColorstr='#{$colorend}', GradientType=0);
+}
+
+@mixin ellipsis($no-wrap: true){
+	@if $no-wrap { white-space: nowrap; }
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
